--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -1,7 +1,7 @@
   <div class="container">
     <p-menubar [model]="items" styleClass="custom-navbar">
       <ng-template pTemplate="start">
-        <span class="app-logo text-primary">My App</span>
+        <span class="app-logo text-primary">Space App</span>
       </ng-template>
     </p-menubar>
   </div>
