--- a/src/styles.scss
+++ b/src/styles.scss
@@ -60,3 +60,20 @@ a {
     max-width: 1320px;
   }
 }
+
+  // Animations
+  .fade-in {
+    opacity: 0;
+    animation: fadeIn ease-in-out 1s forwards;
+  }
+
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+      transform: translateY(10px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
