--- a/src/app/feature/associate-dialog/associate-dialog.component.html
+++ b/src/app/feature/associate-dialog/associate-dialog.component.html
@@ -73,20 +73,11 @@
         </app-form-input>
       </div>
 
-      <div class="col-12 md:col-6">
-        <app-form-input
-          id="status"
-          label="Status"
-          type="switch"
-          formControlName="status">
-        </app-form-input>
-      </div>
-
       <div class="col-12">
         <app-form-input
           id="address"
           label="Address"
-          type="textarea"
+          type="text"
           placeholder="Enter full address"
           [required]="true"
           [rows]="3"
@@ -96,21 +87,30 @@
           [dirty]="address?.dirty ?? false">
         </app-form-input>
       </div>
+      
+      <div class="col-12 md:col-6">
+        <app-form-input
+          id="status"
+          label="Status"
+          type="switch"
+          formControlName="status">
+        </app-form-input>
+      </div>
+
+        <div class="col-12 flex justify-content-end gap-2">
+          <p-button
+            label="Cancel"
+            icon="pi pi-times"
+            (click)="closeDialog()"
+            severity="secondary" />
+          <p-button
+            [label]="submitButtonLabel"
+            icon="pi pi-check"
+            (click)="onSubmit()"
+            severity="primary" />
+        </div>
     </div>
   </form>
 
-  <ng-template pTemplate="footer">
-    <div class="flex justify-content-end gap-2">
-      <p-button
-        label="Cancel"
-        icon="pi pi-times"
-        (click)="closeDialog()"
-        severity="secondary" />
-      <p-button
-        [label]="submitButtonLabel"
-        icon="pi pi-check"
-        (click)="onSubmit()"
-        severity="primary" />
-    </div>
-  </ng-template>
+
 </p-dialog>
