--- a/src/app/feature/associate-list/associate-list.component.html
+++ b/src/app/feature/associate-list/associate-list.component.html
@@ -1,6 +1,6 @@
-<div class="card pt-5">
+<div class="card pt-5 fade-in">
   <!-- Header with Add Button -->
-  <div class="flex justify-content-between align-items-center mb-4">
+  <div class="flex justify-content-between align-items-center mb-4 ">
     <h2 class="text-2xl font-bold m-0">Associates</h2>
     <p-button
       (click)="showDialog()"
@@ -11,7 +11,7 @@
 
   <!-- Filters -->
   <div class="filter-section flex gap-3">
-    <div class="flex-1">
+    <div class="flex-1 ">
       <span class="p-input-icon-left w-full">
         <i class="pi pi-search"></i>
         <input
@@ -37,7 +37,7 @@
 
   <!-- Table -->
   @if (errorMsg) {
-    <div class="col-12">
+    <div class="col-12 ">
       <p-message severity="error" text="{{ errorMsg }}"></p-message>
     </div>
   }
