--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -1,7 +1,7 @@
   <div class="container pt-3 mb-4">
     <p-menubar [model]="items" styleClass="custom-navbar">
       <ng-template pTemplate="start">
-        <span class="app-logo text-primary">UK Business Portal</span>
+        <span class="app-logo text-primary font-bold text-xl">UK Business Portal</span>
       </ng-template>
     </p-menubar>
   </div>
