complete all actions

--- a/src/app/feature/article-dialog/article-dialog.component.html
+++ b/src/app/feature/article-dialog/article-dialog.component.html
@@ -9,7 +9,7 @@
       <div class="col-12 md:col-6">
         <app-form-input
           id="name"
-          label="name"
+          label="Name"
           type="text"
           placeholder="Enter Name"
           [required]="true"
