--- a/src/app/feature/associate-list/associate-list.component.scss
+++ b/src/app/feature/associate-list/associate-list.component.scss
@@ -44,6 +44,9 @@
 
 // Table styling improvements
 ::ng-deep .p-datatable {
+  span {
+    display: inline-block;
+  }
   .p-datatable-header {
     background: transparent;
     border: none;
