--- a/src/app/feature/article-list/article-list.component.html
+++ b/src/app/feature/article-list/article-list.component.html
@@ -2,6 +2,7 @@
     <div class="flex justify-content-between align-items-center mb-4 fade-in">
       <h2 class="text-2xl font-bold m-0">Articles</h2>
       <p-button
+        [hidden]="isUser"
         (click)="showDialog()"
         label="Add Article"
         icon="pi pi-plus"
@@ -57,15 +58,16 @@
                 <p-button label="Read more" icon="pi pi-arrow-up-right"></p-button>
               </a>
 
-
-              <div class="flex gap-2">
+            <div class="flex gap-2">
                 <p-button
+                  [hidden]="isUser"
                   icon="pi pi-pencil"
                   size="small"
                   severity="secondary"
                   (click)="editArticle(article)">
                 </p-button>
                 <p-button
+                [hidden]="isUser"
                   icon="pi pi-trash"
                   size="small"
                   severity="danger"
