--- a/src/app/feature/associate-list/associate-list.component.html
+++ b/src/app/feature/associate-list/associate-list.component.html
@@ -1,4 +1,4 @@
-<div class="card pt-5 fade-in">
+<!-- <div class="associate-list fade-in"> -->
   <!-- Header with Add Button -->
   <div class="flex justify-content-between align-items-center mb-4 ">
     <h2 class="text-2xl font-bold m-0">Associates</h2>
@@ -168,6 +168,6 @@
 
   <!-- Confirm Dialog for Delete -->
   <p-confirmDialog></p-confirmDialog>
-</div>
+<!-- </div> -->
 
 
