--- a/src/app/feature/home/home.component.html
+++ b/src/app/feature/home/home.component.html
@@ -37,13 +37,13 @@
       <div class="col-12 sm:col-6 md:col-4">
         <div class="feature-card">
           <h3>Team Management</h3>
-          <p>Keep track of associate details and groups easily.</p>
+          <p>Follow economic and industry developments in one place.</p>
         </div>
       </div>
       <div class="col-12 sm:col-6 md:col-4">
         <div class="feature-card">
           <h3>Real-Time Content</h3>
-          <p>Data updates dynamically to reflect latest activity.</p>
+          <p>Follow economic and industry developments in one place.</p>
         </div>
       </div>
     </div>
