--- a/src/app/feature/auth/login/login.component.html
+++ b/src/app/feature/auth/login/login.component.html
@@ -3,6 +3,10 @@
     <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
       <div class="card-header">
         <h2 class="text-blue-400 mb-5">Login</h2>
+        <p>[for test]</p>
+        <p>[admin => email: youssefrafat70&#64;gmail.com, password: 123YYyy&#64;&#64;]</p>
+        <p>[associate => email: youssefrafat700&#64;gmail.com, password: 123YYyy&#64;&#64;]</p>
+        <p class="mb-4">[user => email: youssefrafat70000&#64;gmail.com, password: 123YYyy&#64;&#64;]</p>
       </div>
       <div class="card-body">
         <app-form-input
